Resolve a DCHECK failure in Views Cast dialog

The DCHECK failure was being caused by having an unnecessary InkDrop /
mask layer.

Bug: 912687
Change-Id: Ie19d26aacb1118c8aa80b47baa7c10f1e1e296af
Reviewed-on: https://chromium-review.googlesource.com/c/1368767
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615285}
Former-commit-id: 96194512880cbc7b31e928a7ae5007e60c86655b